# stlarea

./: README.md  stack.yaml  stlarea-file.sh  stlarea.cabal  stlarea.sh  stlareabinary.hs  stlareatext.hs  stltest.cabal  stltest.hs  test.stl
src/: STLArea.hs
