name:                  stlarea
version:               0.0.0
build-type:            Simple
cabal-version:         >= 1.22

library
    hs-source-dirs:    src
    exposed-modules:   STLArea
    build-depends:     base >= 4.8 && < 5
                     , basic-prelude
                     , STL

executable stlareatext
  default-language:    Haskell2010
  main-is:             stlareatext.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       attoparsec
                     , base >= 4.8 && < 5
                     , basic-prelude
                     , STL
                     , stlarea

executable stlareabinary
  default-language:    Haskell2010
  main-is:             stlareabinary.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base >= 4.8 && < 5
                     , basic-prelude
                     , bytestring
                     , cereal
                     , STL
                     , stlarea
