name:                  stltest
version:               0.0.0
build-type:            Simple
cabal-version:         >= 1.22

executable stl-test
  default-language:    Haskell2010
  main-is:             stltest.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       attoparsec
                     , base >= 4.8 && < 5
                     , basic-prelude
                     , bytestring
                     , STL
